# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.115 2004/12/06 22:25:10 wolf31o2 Exp $

  06 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean2-chroot.sh:
  Added patch from vapier and closing bug #73556.

  22 Nov 2004; John Davis <zhen@gentoo.org> modules/embedded_target.py,
  modules/generic_stage_target.py, -targets/embedded/cramfs-runscript.sh,
  +targets/embedded/embedded-fs-runscript.sh,
  targets/livecd-stage2/unmerge.sh, targets/stage1/stage1-chroot.sh,
  targets/stage2/stage2-chroot.sh, targets/stage3/stage3-chroot.sh:
  fixes for bugs #49819 and #71033. Partial fix for #67289 - waiting on a patch
  from mutex@gentoo.org for modules/embedded.py

  19 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/gamecd-xinitrc, livecd/runscript-support/gamecdfs-update.sh,
  livecd/runscript-support/livecdfs-update.sh:
  Fixing up some GameCD stuff and also fixing a problem with the ls and grep
  aliases having --color rather than --color=auto.

  17 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/livecd-local.start:
  Let's try actually making a proper edit on livecd/files/livecd-local.start
  this time, shall we...

  17 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/livecd-local.start:
  Fixing up livecd/files/livecd-local.start to remove ALSA config and make
  x-setup check for /etc/startx.

  14 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/gamecdfs-update.sh:
  Fixing minor sed bug in gamecdfs-update.sh.

  07 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  examples/snapshot_template.spec,
  livecd/runscript-support/gamecdfs-update.sh,
  livecd/runscript-support/livecdfs-update.sh:
  Fixing typo in snapshot_template.spec and closing bug #70321.

  02 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org>